--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -17,5 +17,8 @@
 "This password reset link will expire in :count minutes.": "再設定URLの有効期限は :count 分です。",
 "If you did not request a password reset, no further action is required.": "もしパスワード再発行をリクエストしていない場合、操作は不要です。",
 "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:actionURL](:actionURL)": "\":actionText\"ボタンを押しても何も起きない場合、以下URLをコピーしてWebブラウザに貼り付けてください。\n[:actionURL](:actionURL)",
-"Regards": "よろしくお願いいたします"
+"Regards": "よろしくお願いいたします",
+
+"You've verified your email address.":"メールアドレスの確認が完了しました。",
+"Let's get started.":"さっそく始めてみましょう。"
 }
