--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -18,6 +18,7 @@
 "If you did not request a password reset, no further action is required.": "もしパスワード再発行をリクエストしていない場合、操作は不要です。",
 "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:actionURL](:actionURL)": "\":actionText\"ボタンを押しても何も起きない場合、以下URLをコピーしてWebブラウザに貼り付けてください。\n[:actionURL](:actionURL)",
 "Regards": "よろしくお願いいたします",
+"The email has already been taken.":"このメールアドレスはすでに使われています。",
 
 "You've verified your email address.":"メールアドレスの確認が完了しました。",
 "Let's get started.":"さっそく始めてみましょう。"
