--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -12,7 +12,15 @@
 "Remember Me": "ログイン状態を保存",
 
 "Hello!": "ご利用ありがとうございます。",
+"Please click the button below to verify your email address.": "下のボタンをクリックする、ユーザーの本登録が完了します。",
+"Verify Email Address": "登録する",
+"If you did not crean an account, no further action is required.": "もしこのメールにお心当たりがない場合は、そのまま削除してください。",
 "Reset Password Notification":  "パスワード再設定のお知らせ",
+"'Before proceeding, please check your email for a verification link.": "ユーザーの本登録が完了していません。送信されたメールのリンクをご確認ください。",
+"If you did not receive the email": "もしメールを受信していない場合は、もう一度送信することができます",
+"click here to request another": "もう一度送信する。",
+"A fresh verification link has been sent to your email address.": "もう一度メールを送信しました。ご確認ください。",
+
 "You are receiving this email because we received a password reset request for your account.": "あなたのアカウントでパスワード再発行のリクエストがありました。",
 "This password reset link will expire in :count minutes.": "再設定URLの有効期限は :count 分です。",
 "If you did not request a password reset, no further action is required.": "もしパスワード再発行をリクエストしていない場合、操作は不要です。",
@@ -20,6 +28,6 @@
 "Regards": "よろしくお願いいたします",
 "The email has already been taken.":"このメールアドレスはすでに使われています。",
 
-"You've verified your email address.":"メールアドレスの確認が完了しました。",
+"You've verified your email address.":"メールアドレスの確認が完了しました。本登録完了です。",
 "Let's get started.":"さっそく始めてみましょう。"
 }
