メール認証周辺の文言変更

--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -14,7 +14,7 @@
 "Hello!": "ご利用ありがとうございます。",
 "Please click the button below to verify your email address.": "下のボタンをクリックする、ユーザーの本登録が完了します。",
 "Verify Email Address": "登録する",
-"If you did not crean an account, no further action is required.": "もしこのメールにお心当たりがない場合は、そのまま削除してください。",
+"If you did not create an account, no further action is required.": "もしこのメールにお心当たりがない場合は、そのまま削除してください。",
 "Reset Password Notification":  "パスワード再設定のお知らせ",
 "'Before proceeding, please check your email for a verification link.": "ユーザーの本登録が完了していません。送信されたメールのリンクをご確認ください。",
 "If you did not receive the email": "もしメールを受信していない場合は、もう一度送信することができます",
