メール認証周辺の日本語を整備

--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -14,9 +14,10 @@
 "Hello!": "ご利用ありがとうございます。",
 "Please click the button below to verify your email address.": "下のボタンをクリックする、ユーザーの本登録が完了します。",
 "Verify Email Address": "登録する",
+"Verify Your Email Address": "本登録を完了させてください。",
 "If you did not create an account, no further action is required.": "もしこのメールにお心当たりがない場合は、そのまま削除してください。",
 "Reset Password Notification":  "パスワード再設定のお知らせ",
-"'Before proceeding, please check your email for a verification link.": "ユーザーの本登録が完了していません。送信されたメールのリンクをご確認ください。",
+"Before proceeding, please check your email for a verification link.": "ユーザーの本登録が完了していません。送信されたメールのリンクをご確認ください。",
 "If you did not receive the email": "もしメールを受信していない場合は、もう一度送信することができます",
 "click here to request another": "もう一度送信する。",
 "A fresh verification link has been sent to your email address.": "もう一度メールを送信しました。ご確認ください。",
