verified.blade.phpの見た目を整えた。

--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -12,7 +12,7 @@
 "Remember Me": "ログイン状態を保存",
 
 "Hello!": "ご利用ありがとうございます。",
-"Please click the button below to verify your email address.": "下のボタンをクリックする、ユーザーの本登録が完了します。",
+"Please click the button below to verify your email address.": "下のボタンをクリックすると、ユーザーの本登録が完了します。",
 "Verify Email Address": "登録する",
 "Verify Your Email Address": "本登録を完了させてください。",
 "If you did not create an account, no further action is required.": "もしこのメールにお心当たりがない場合は、そのまま削除してください。",
