このサイトの使い方作成

--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -1,6 +1,6 @@
 {
 "Login": "ログイン",
-"Register": "新規登録",
+"Register": "ユーザー登録",
 "Forgot Your Password?": "パスワードを忘れた場合",
 "Reset Password": "パスワード再設定",
 "Send Password Reset Link":  "パスワード再設定URLを送信",
